--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NODE_ENV=development
 PORT=3100
-MONGODB_URL=mongodb+srv://dtradeapp:DTradeDal@dtradecluster.u3wttir.mongodb.net/dtradedb?retryWrites=true&w=majority
+MONGODB_URL = mongodb+srv://kalpesh:Kalpesh12ka4@trading-simluation-ins.zuzpbus.mongodb.net/?retryWrites=true&w=majority
+
